working webcam retrieval, incl geolocation

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "prototype",
   "version": "1.0.0",
-  "homepage": "https://github.com/cadenichols/photoshop",
+  "homepage": "https://github.com/cadenichols/",
   "authors": [
     "Cade Nichols<cade@cadenichols.com>"
   ],
