--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prototype",
   "description": "Prototype Application",
-  "homepage": "https://github.com/cadenichols/weather.git",
+  "homepage": "https://github.com/cadenichols/",
   "keywords": [
     "gulp",
     "jshint",
